<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_cartTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/lato_bold_italic"
            android:text="@string/cartTitle"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <RelativeLayout
            android:id="@+id/deliveryTypePanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/label_cartTitle">

            <RelativeLayout
                android:id="@+id/choosePanel_EntregaNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/choose_panel">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entregaNormal"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/choosePanel_EntregaNormal"
                android:layout_marginStart="10dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/choose_panel">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entregaExpresso"/>

            </RelativeLayout>

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/deliveryTypePanel"
            app:layout_constraintHeight_percent="0.60"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/recycler_view"
            app:layout_constraintHeight_percent="0.15">

            <TextView
                android:id="@+id/label_totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/totalPrice"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/label_productsTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_totalPrice"
                android:fontFamily="@font/lato_bold"
                android:text="@string/totalProductsPrice"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/label_entregaPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_productsTotalPrice"
                android:fontFamily="@font/lato_bold"
                android:text="@string/deliveyPrice"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/label_totalIVA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_entregaPrice"
                android:fontFamily="@font/lato_bold"
                android:text="@string/ivaPrice"
                android:textSize="14sp" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

   <RelativeLayout
       android:id="@+id/emptyCart"
       app:layout_constraintTop_toTopOf="parent"
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_centerVertical="true"
           android:textAlignment="center"
           android:fontFamily="@font/lato_bold_italic"
           android:textSize="20sp"
           android:text="@string/emptyCart"/>

   </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>